fix for some height issues on mobile

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -54,8 +54,10 @@ p {
 }
 
 .full-page, .full-height {
-  position: relative;
-  height: 100%;
+  @media #{$medium-up} {
+    position: relative;
+    height: 100%;
+  }
 }
 
 .main-nav {
